add local bootstrap & jquery

--- a/vpanel2/templates/vpanel2/base.html
+++ b/vpanel2/templates/vpanel2/base.html
@@ -1,10 +1,11 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="de">
  <head>
   <title>VPanel2 &middot; {% block title %}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static "bootstrap-3.0.0/css/bootstrap.min.css" %}">
  </head>
  <body>
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
@@ -27,9 +28,9 @@
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="{% static "jquery-2.0.3.min.js" %}"></script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="{% static "bootstrap-3.0.0/js/bootstrap.min.js" %}"></script>
  </body>
 </html>
